--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   "homepage": "https://mashtalerleonid.github.io/goit-js-hw-10-food-service",
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
+    "parcel-plugin-handlebars-precompile": "^1.0.2",
     "parcel-plugin-nuke-dist": "^1.0.1"
-  }  
+  },
+  "dependencies": {
+    "gh-pages": "^3.2.0"
+  }
 }
